# ai_training_experiments

./: .gitignore  Cargo.toml  README.md
checkpoints/baseline/: config.json
checkpoints/gpu200/: config.json
checkpoints/grid5d/: config.json
checkpoints/grid_smoke/: config.json
checkpoints/risc/: config.json
checkpoints/sft_smoke/: config.json
checkpoints/smoke/: config.json
data/: seed_examples.jsonl
src/: backend.rs  checks.rs  main.rs  model.rs  retrieval.rs  sample.rs  sft.rs  train.rs  viz.rs
src/data/: corpus.rs  format.rs  mod.rs  synth.rs  tokenizer.rs
src/tools/: calculator.rs  mod.rs
